@@ -24,3 +24,4 @@ ERROR_EMPTY_NOT_ALLOWED = "empty values not allowed"
 ERROR_NOT_NULLABLE = "null value not allowed"
 ERROR_REGEX = "value does not match regex '%s'"
 ERROR_DEPENDENCIES_FIELD = "field '%s' is required"
+ERROR_DEPENDENCIES_FIELD_VALUE = "field '%s' is required with values: %s"
